fixed styling on what we do page content was off screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ header{
     padding-bottom: 10px;
 }
 .wedo-texts{
-    overflow:hidden;
+    overflow: hidden scroll;
     width: 200px;
     height: 100px;
     border: 3px solid #73AD21;
@@ -127,7 +127,7 @@ header{
     position: relative;
     top:50px;
     z-index:5;
-    margin:1px;
+    margin:20px;
 }
 .wedo-images{
     overflow: hidden;
